@@ -1,9 +1,8 @@
 package com.dedicatedcode.reitti.repository;
 
 import com.dedicatedcode.reitti.dto.LocationPoint;
-import com.dedicatedcode.reitti.model.geo.GeoPoint;
+import com.dedicatedcode.reitti.model.ClusteredPoint;
 import com.dedicatedcode.reitti.model.geo.RawLocationPoint;
-import com.dedicatedcode.reitti.model.geo.Visit;
 import com.dedicatedcode.reitti.model.security.User;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -15,10 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.sql.Timestamp;
-import java.time.Duration;
-import java.time.Instant;
-import java.time.LocalDate;
-import java.time.ZonedDateTime;
+import java.time.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -36,7 +32,7 @@ public class RawLocationPointJdbcService {
 
     public RawLocationPointJdbcService(JdbcTemplate jdbcTemplate, PointReaderWriter pointReaderWriter, GeometryFactory geometryFactory) {
         this.jdbcTemplate = jdbcTemplate;
-        this.rawLocationPointRowMapper = (rs, _) -> new RawLocationPoint(
+        this.rawLocationPointRowMapper = (rs, rowNum) -> new RawLocationPoint(
                 rs.getLong("id"),
                 rs.getTimestamp("timestamp").toInstant(),
                 pointReaderWriter.read(rs.getString("geom")),
@@ -169,7 +165,7 @@ public class RawLocationPointJdbcService {
                 "FROM raw_location_points rlp " +
                 "WHERE rlp.id = ?";
         List<RawLocationPoint> results = jdbcTemplate.query(sql, rawLocationPointRowMapper, id);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
     }
 
     public Optional<RawLocationPoint> findLatest(User user, Instant since) {
@@ -178,7 +174,7 @@ public class RawLocationPointJdbcService {
                 "WHERE rlp.user_id = ? AND rlp.timestamp >= ? " +
                 "ORDER BY rlp.timestamp LIMIT 1";
         List<RawLocationPoint> results = jdbcTemplate.query(sql, rawLocationPointRowMapper, user.getId(), Timestamp.from(since));
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
     }
 
     public Optional<RawLocationPoint> findLatest(User user) {
@@ -187,86 +183,41 @@ public class RawLocationPointJdbcService {
                 "WHERE rlp.user_id = ? " +
                 "ORDER BY rlp.timestamp DESC LIMIT 1";
         List<RawLocationPoint> results = jdbcTemplate.query(sql, rawLocationPointRowMapper, user.getId());
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
     }
 
-    public List<Visit> findVisitsInTimerangeForUser(
-            User user, Instant startTime, Instant endTime, long minimumStayTime, double distanceInMeters) {
-        String sql = """
-                
-                WITH smoothed_data AS (
-                                       -- Step 1: Smooth the track using a rolling centroid of the last 4 points
-                                       SELECT\s
-                                           *,
-                                           ST_Centroid(
-                                               ST_Collect(geom) OVER (
-                                                   ORDER BY "timestamp"
-                                                   ROWS BETWEEN 4 PRECEDING AND CURRENT ROW
-                                               )
-                                           ) AS smoothed_geom
-                                       FROM raw_location_points
-                                       WHERE user_id = ? AND "timestamp" BETWEEN ? AND ?
-                                   ),
-                                   lagged_data AS (
-                                       -- Step 2: Add the lagged smoothed geometry and timestamp
-                                       SELECT
-                                           *,
-                                           LAG(smoothed_geom, 4) OVER (ORDER BY "timestamp") AS prev_smoothed_geom,
-                                           LAG("timestamp", 4) OVER (ORDER BY "timestamp") AS prev_ts
-                                       FROM smoothed_data
-                                   ),
-                                   island_flags AS (
-                                       -- Step 3: Identify breaks (islands) based on smoothed movement
-                                       SELECT
-                                           *,
-                                           CASE
-                                               WHEN prev_smoothed_geom IS NULL THEN 1
-                                               -- Check if current smoothed center is > 50m from 1 minute ago center
-                                               WHEN ST_Distance(smoothed_geom::geography, prev_smoothed_geom::geography) > ? THEN 1
-                                               -- Check if time gap is > 10 minutes (600 seconds)
-                                               WHEN EXTRACT(EPOCH FROM ("timestamp" - prev_ts)) > ? THEN 1
-                                               ELSE 0
-                                           END AS is_new_cluster
-                                       FROM lagged_data
-                                   ),
-                                   clustered_points AS (
-                                       -- Step 4: Assign a unique ID by summing the flags
-                                       SELECT
-                                           *,
-                                           SUM(is_new_cluster) OVER (ORDER BY "timestamp") AS cluster_id
-                                       FROM island_flags
-                                   )
-                                   -- Step 5: Final Output - Group into "Stay Events"
-                                   SELECT
-                                       cluster_id,
-                                       MIN("timestamp") AS arrival,
-                                       MAX("timestamp") AS departure,
-                                       EXTRACT(EPOCH FROM (MAX("timestamp") - MIN("timestamp"))) AS duration,
-                                       COUNT(*) AS point_count,
-                                       ST_AsText(ST_Centroid(ST_Collect(geom))) AS cluster_center_geom
-                                   FROM clustered_points
-                                   GROUP BY cluster_id
-                                   HAVING COUNT(*) >= 4 -- Must stay for at least 1 minute to be a cluster
-                                   ORDER BY arrival;
-                """;
-        return jdbcTemplate.query(sql, (rs, _) -> {
-            GeoPoint geom = this.pointReaderWriter.read(rs.getString("cluster_center_geom"));
-            return new Visit(geom.longitude(),
-                             geom.latitude(),
-                             rs.getTimestamp("arrival").toInstant(),
-                             rs.getTimestamp("departure").toInstant(),
-                             rs.getLong("duration"),
-                             false
-            );
-        }, user.getId(), Timestamp.from(startTime), Timestamp.from(endTime), distanceInMeters, minimumStayTime);
+    public List<ClusteredPoint> findClusteredPointsInTimeRangeForUser(
+            User user, Instant startTime, Instant endTime, int minimumPoints, double distanceInMeters) {
+        String sql = "SELECT rlp.id, rlp.accuracy_meters, rlp.elevation_meters, rlp.timestamp, rlp.user_id, ST_AsText(rlp.geom) as geom, rlp.processed, rlp.synthetic, rlp.ignored, rlp.version , " +
+                "ST_ClusterDBSCAN(rlp.geom, ?, ?) over () AS cluster_id " +
+                "FROM raw_location_points rlp " +
+                "WHERE rlp.user_id = ? AND rlp.timestamp BETWEEN ? AND ?";
+
+        return jdbcTemplate.query(sql, (rs, rowNum) -> {
+
+                    RawLocationPoint point = new RawLocationPoint(
+                            rs.getLong("id"),
+                            rs.getTimestamp("timestamp").toInstant(),
+                            this.pointReaderWriter.read(rs.getString("geom")),
+                            rs.getDouble("accuracy_meters"),
+                            rs.getObject("elevation_meters", Double.class),
+                            rs.getBoolean("processed"),
+                            rs.getBoolean("synthetic"),
+                            rs.getBoolean("ignored"),
+                            rs.getLong("version")
+                    );
+
+                    Integer clusterId = rs.getObject("cluster_id", Integer.class);
+
+                    return new ClusteredPoint(point, clusterId);
+                }, distanceInMeters, minimumPoints, user.getId(),
+                Timestamp.from(startTime), Timestamp.from(endTime));
     }
 
-    @SuppressWarnings("DataFlowIssue")
     public long count() {
         return jdbcTemplate.queryForObject("SELECT COUNT(*) FROM raw_location_points", Long.class);
     }
 
-    @SuppressWarnings("DataFlowIssue")
     public List<RawLocationPoint> findPointsInBoxWithNeighbors(
             User user,
             Instant startTime,
@@ -441,7 +392,7 @@ public class RawLocationPointJdbcService {
         String sql = """
         WITH sampled_points AS (
             SELECT DISTINCT ON (
-                date_trunc('hour', timestamp) +
+                date_trunc('hour', timestamp) + 
                 (EXTRACT(minute FROM timestamp)::int / %d) * interval '%d minutes'
             )
             id,
@@ -458,7 +409,7 @@ public class RawLocationPointJdbcService {
               AND timestamp BETWEEN ? AND ?
               AND ignored = false
             ORDER BY
-                date_trunc('hour', timestamp) +
+                date_trunc('hour', timestamp) + 
                 (EXTRACT(minute FROM timestamp)::int / %d) * interval '%d minutes',
                 timestamp
         )
@@ -482,7 +433,6 @@ public class RawLocationPointJdbcService {
                                   Timestamp.from(startTime), Timestamp.from(endTime));
     }
 
-    @SuppressWarnings("DataFlowIssue")
     public long countByUser(User user) {
         return jdbcTemplate.queryForObject("SELECT COUNT(*) FROM raw_location_points WHERE user_id = ?", Long.class, user.getId());
     }
